Fix battle renderer css issue
The grid was vertically squished on the battle page on safari.

--- a/src/battle-viewer/main.scss
+++ b/src/battle-viewer/main.scss
@@ -206,6 +206,9 @@
     position: relative;
 
     ._renderer {
+      // fix renderer being vertically squished on the battle page on safari
+      height: 100%;
+
       position: absolute;
       top: 0;
       left: 0;
